# tasks

./: .gitignore
.github/workflows/: api.yml  ui.yml
services/task_ui/: package-lock.json  package.json
services/tasks_api/: create_dynamodb_locally.py  main.py  pyproject.toml  schemas.py  serverless.yml  store.py  tests.py
services/tasks_api/docker/dynamodb/: shared-local-instance.db
services/tasks_ui/: index.html  package-lock.json  package.json  serverless.yml  vite.config.js
services/tasks_ui/src/: App.vue  aws-exports.js  main.js
